<resources>
    <string name="app_name">Wallpapers</string>
    <string name="progress_dialog_title">Loading</string>
    <string name="please_wait">Please wait</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="author_placeholder">By %s</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="setup_successfully">Set up successfully</string>
    <string name="schedule_your_wallpaper">Touch to set wallpaper change period</string>
    <string name="only_when_wifi">Only when Wi-Fi enabled</string>
    <string name="only_when_wifi_summary">Download new wallpappers only when connected via Wi-Fi. Downloading via mobile network may be expensive.</string>
    <string name="wallpaper_topic">Wallpapper topic</string>
    <string name="wallpaper_tag">Wallpaper tag</string>
    <string name="tag_hint">E.g. nature</string>
    <string name="use_random">Use random pictures</string>
    <string name="use_custom_tag">Use custom tag</string>
    <string name="use_random_summary">If on, application will download random images for wallpaper</string>
    <string name="image_content_settings">Image content</string>
    <string name="use_custom_summary">Type your keyword for wallpaper search into field below</string>
    <string name="your_keyword">Your keyword</string>
    <string name="keyword_hint">E.g: winter wallpaper</string>
    <string name="wallpaper_topic_summary">Select your wallpaper tag</string>
    <string name="change_frequency">Change frequency</string>
    <string name="change_frequency_summary">Select wallpaper changing frequency</string>
    <string name="other">Other</string>
    <string name="wallpaper_scheduler">Wallpaper scheduler</string>
    <string name="prefs_key_tags">prefs_key_tags</string>
    <string name="prefs_key_random_flag">prefs_key_random_flag</string>
    <string name="prefs_key_custom_tag_flag">prefs_key_custom_tag_flag</string>
    <string name="prefs_key_keyword">prefs_key_keyword</string>
    <string name="prefs_key_frequency">prefs_key_frequency</string>
    <string name="prefs_key_onlywifi">prefs_key_onlywifi</string>
    <string name="prefs_key_disable_scheduling">prefs_key_disable_scheduling</string>
    <string name="select_frequency">Please, select frequency</string>
    <string name="enter_keyword">When you are using custom tag, you are must provide keyword. Enter it above</string>
    <string name="select_tags">Select tags from list above</string>
    <string name="selected">Selected: %s</string>
    <string name="selected_hours">Selected %d hours</string>
    <string name="frequency_daily">Selected daily frequency</string>
    <string name="error_when_updating_prefs">Error when updating prefs</string>
    <string name="active_wallpaper">Active wallpaper. \nTouch for details</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="set_up_your_wallpaper">Set up your wallpaper</string>
    <string name="wait_a_second">Just wait a second!</string>
    <string name="wallpaper_scheduled">Wallpaper scheduled!\n Touch to open settings</string>
    <string name="disable_scheduling">Disable scheduling</string>
    <string name="disable_scheduling_summary_not_enabled">Scheduling not enabled yet</string>
    <string name="disable_scheduling_summary_enabled">Tap to disable scheduling and keep current wallpapper</string>
    <string name="home_screen">Home screen</string>
    <string name="lock_screen">Lock screen</string>
    <string name="home_and_lock_screen">Home and lock screen</string>
    <string name="dialog_title_wallpaper_target">Wallpaper target</string>
    <string name="dismiss">Dismiss</string>
    <string name="prefs_key_target_both">target_both</string>
    <string name="prefs_key_target_home">target_home</string>
    <string name="prefs_key_target_lock">target_lock</string>
    <string name="open_in_unsplash">Open in unsplash.com</string>
</resources>
