<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/image_content_settings">
        <MultiSelectListPreference
            android:key="@string/prefs_key_tags"
            android:title="@string/wallpaper_tag"
            android:summary="@string/wallpaper_topic_summary"
            android:entries="@array/tags"
            android:entryValues="@array/tags" />
        <SwitchPreference
            android:key="@string/prefs_key_random_flag"
            android:title="@string/use_random"
            android:summary="@string/use_random_summary"/>
        <SwitchPreference
            android:key="@string/prefs_key_custom_tag_flag"
            android:title="@string/use_custom_tag"
            android:summary="@string/use_custom_summary"/>
        <EditTextPreference
            android:key="@string/prefs_key_keyword"
            android:title="@string/your_keyword"
            android:hint="@string/keyword_hint"
            android:enabled="false"
            android:summary="@string/keyword_hint"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/change_frequency">
        <ListPreference
            android:key="@string/prefs_key_frequency"
            android:title="@string/change_frequency"
            android:defaultValue="0"
            android:summary="@string/change_frequency_summary"
            android:entries="@array/frequencies"
            android:entryValues="@array/frequency_values" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other">
        <CheckBoxPreference
            android:key="@string/prefs_key_onlywifi"
            android:title="@string/only_when_wifi"
            android:defaultValue="true"
            android:summary="@string/only_when_wifi_summary" />

        <Preference
            android:key="@string/prefs_key_disable_scheduling"
            android:title="@string/disable_scheduling"
            android:summary="@string/disable_scheduling_summary_not_enabled"
            android:enabled="false"
            />
    </PreferenceCategory>
</PreferenceScreen>