<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_home_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_home_screen"
        android:drawablePadding="8dp"
        android:text="@string/home_screen"
        android:background="?android:attr/selectableItemBackground"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/tv_lock_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_lock_screen"
        android:drawablePadding="8dp"
        android:text="@string/lock_screen"
        android:background="?android:attr/selectableItemBackground"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/tv_home_and_lock_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_lock_and_home"
        android:drawablePadding="8dp"
        android:text="@string/home_and_lock_screen"
        android:background="?android:attr/selectableItemBackground"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

</LinearLayout>